Fixed scrollbar appearing on dialog box caused by inheriting body margin top css rule
git-svn-id: https://plugins.svn.wordpress.org/flickree/trunk@540217 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/tinymce.css
+++ b/tinymce.css
@@ -5,7 +5,7 @@ html {
   height:100%;
 }
 body {
-  font:12px/1.4em sans-serif; min-height:100%; margin:0; padding:0;
+  font:12px/1.4em sans-serif; min-height:100%; padding:0; margin: 0px 8px 0 8px !important;
 }
 #flickree_form {
   position:relative; padding-bottom:60px;
